--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
     height: 100%;
 
     /* Create the parallax scrolling effect */
-    background-attachment: fixed;
+    /*background-attachment: fixed;*/
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -63,39 +63,6 @@ body, html {
     background-size: cover;
 }
 
-/*
-.quad {
-  width:50%;
-  height:100%;
-  float:left;
-
-}
-
-.line {
-  height:50%;
-  width:100%;
-}
-
-.equal, .equal > div[class*='col-'] {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  flex:1 0 auto;
-}*/
-
-/* oi!
-.tl { position: absolute; top: 0; left: 0; right: 50%; bottom: 50%;
-      background: red; border:solid #000; border-width: 0 10px 10px 0; }
-.tr { position: absolute; top: 0; left: 50%; right: 0; bottom: 50%;
-      background: blue; border:solid #000; border-width: 0 0 10px 0; }
-.bl { position: absolute; top: 50%; left: 0; right: 50%; bottom: 0;
-      background: yellow; border:solid #000; border-width: 0 10px 0 0; }
-.br { position: absolute; top: 50%; left: 50%; right: 0; bottom: 0;
-      background: green; } */
-
-
 .parallax4 {
     /* The image used */
     /*background-color: #00BFFF;*/
@@ -123,8 +90,4 @@ body, html {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-}
-
-.fa-linkedin-square:hover{
-  background: grey; /* make this whatever you want */
 }
