Added button functionality

--- a/styles.css
+++ b/styles.css
@@ -30,10 +30,10 @@ body, html {
     margin: 0;
 }
 
-.glyphicon.glyphicon-envelope {
+/*.glyphicon.glyphicon-envelope {
     font-size: 75%;
     top: 2px;
-}
+}*/
 
 .parallax2 {
     /* The image used */
