--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,9 @@ body, html {
 
 .parallax2 {
     /* The image used */
-    background-image: url('./images/geisel1.jpg');
+    /*background-image: url('./images/blur1.jpg');*/
+    background-color: #222233;
+    /*background-color: Olive*/
 
     /* Full height */
     height: 100%;
@@ -67,12 +69,13 @@ body, html {
     /* The image used */
     /*background-color: #00BFFF;*/
     background-color: #483D8B;
+    /*background-color: #222233;*/
 
     /* Full height */
     height: 100%;
 
     /* Create the parallax scrolling effect */
-    background-attachment: fixed;
+    /*background-attachment: fixed;*/
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
