changed background color of projects

--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ body, html {
 .projects {
     /* The image used */
     /*background-color: #00BFFF;*/
-    background-color: #0091ea;
+    background-color: green;
     /*background-color: #222233;*/
 
     /* Full height */
